Update Lesson 2 -- Intro to Numpy.ipynb

--- a/MA477 - Theory and Applications of Data Science/Lesson 2 -- Intro to Numpy.ipynb
+++ b/MA477 - Theory and Applications of Data Science/Lesson 2 -- Intro to Numpy.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "<h2> ======================================================</h2>                               \n",
-    " <h1><center>MA477 $-$ Theory and Applications of Data Science</center></h1> \n",
+    " <h1><center>MA477 - Theory and Applications of Data Science</center></h1> \n",
     "  <h1><center>Lesson 2: Introduction to NumPy</center></h1> \n",
     " \n",
     " <h4><center>Dr. Valmir Bucaj</center></h4>\n",
