--- a/MA477 - Theory and Applications of Data Science/Lesson 2 -- Intro to Numpy.ipynb
+++ b/MA477 - Theory and Applications of Data Science/Lesson 2 -- Intro to Numpy.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2> ======================================================</h2>                               \n",
-    " <h1><center>MA477 - Theory and Applications of Data Science</center></h1> \n",
-    "  <h1><center>Lesson 2: Introduction to NumPy</center></h1> \n",
+    "<h2> ======================================================</h2>\n",
+    " <h1>MA477 - Theory and Applications of Data Science</h1> \n",
+    "  <h1>Lesson 2: Introduction to NumPy</h1> \n",
     " \n",
-    " <h4><center>Dr. Valmir Bucaj</center></h4>\n",
-    " <center>United States Military Academy, West Point</center> \n",
-    " <center> AY20-2</center>\n",
+    " <h4>Dr. Valmir Bucaj</h4>\n",
+    " United States Military Academy, West Point \n",
+    "AY20-2\n",
     "<h2>=======================================================</h2>"
    ]
   },
