Update Lesson 2 -- Intro to Numpy.ipynb

--- a/MA477 - Theory and Applications of Data Science/Lesson 2 -- Intro to Numpy.ipynb
+++ b/MA477 - Theory and Applications of Data Science/Lesson 2 -- Intro to Numpy.ipynb
@@ -716,11 +716,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>=====================================================================</h2>\n",
+    "<h2>==================================================</h2>\n",
     "<br>\n",
-    "<center><font color='red' size=6><b>HOMEWORK #1</b></font></center>\n",
+    "<h1>HOMEWORK #1</h1>\n",
     "\n",
-    "<h2>=====================================================================</h2>\n",
+    "<h2>=================================================</h2>\n",
     "\n",
     "<h3> Complete the following exercises</h3>\n",
     "<br>\n",
