added classroom info

--- a/MA477 - Theory and Applications of Data Science/Course Memo and Outline/MA477- Intro to Machine Learning with Python_Syllabus.tex
+++ b/MA477 - Theory and Applications of Data Science/Course Memo and Outline/MA477- Intro to Machine Learning with Python_Syllabus.tex
@@ -101,7 +101,7 @@ MADN-MATH
 
 \subsection{Purpose}
 
-This memorandum specifies materials, describes the goals and objectives, and announces policy and procedures for MA477 during AY 20-02.
+This memorandum specifies materials, describes the goals and objectives, and announces policy and procedures for MA477 during AY 20-2.
 
 \subsection{Instructor Info}
 
@@ -110,12 +110,17 @@ Office Nr.: TH224\\
 Ext: 7460\\
 Email: valmir.bucaj$@$westpoint.edu
 
-\subsection{Course Website}
+\subsection{Course Website \& Classroom Info \& Meeting Time}
+
+\begin{itemize}
+\item {\bf Classroom:} TH319
+\item {\bf Meeting time:} 0855 -- 1010
+\end{itemize}
 
 All of the materials for this course will be published and made available in our course website, which may be found in the link below:
 \vskip 12pt
 
-\href{https://vbucaj.github.io/MA477-course/}{Course Website URL}
+\begin{center}\href{https://vbucaj.github.io/MA477-course/}{\bf Course Website URL}\end{center}
 
 
 \subsection{Textbooks and Supporting Materials}
