--- a/MA477 - Theory and Applications of Data Science/Lessons/Lesson 1 - General Overview/Lesson 1 -- General Overview.ipynb
+++ b/MA477 - Theory and Applications of Data Science/Lessons/Lesson 1 - General Overview/Lesson 1 -- General Overview.ipynb
@@ -370,11 +370,12 @@
    "source": [
     "<h2> Why do we want to estimate $f$ ?</h2>\n",
     "\n",
-    "\n",
+    "<font size='3'>\n",
     "  Typically there are two main reasons why it is of interest to estimate $f$: <b> prediction</b> and <b>inference</b>.\n",
     "  \n",
     "  <ol style='list-style-type:square;'>\n",
-    "    <li><b><font size='4'>Prediction</font></b></li>\n",
+    "    \n",
+    "   <li><b><font size='4'>Prediction</font></b></li>\n",
     "    \n",
     "  In many situations we can get a hold of the features for a particular target, but obtaining the value of the target variable is difficult and often impossible.\n",
     "  \n",
@@ -415,15 +416,46 @@
     " <br>\n",
     "Discuss the <b> Income</b> and the <b> Drug Adverse Reaction</b> cases from this perspective.\n",
     "</ol>\n",
-    "\n"
+    "</font>\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h2> How is $f$ Estimated?</h2>\n",
+    "<br>\n",
+    "<font size='3'>\n",
+    "    \n",
+    "To estimate $f$ you need data...often a lot of data...that will train or teach our method how to estimate $f$. The data used to train our method is refered to as <b> training data</b>.\n",
+    "\n",
+    "For example, if $x_i=(x_{i1},x_{i2},\\dots, x_{in})$ for $i=1,2,\\dots,n$ is the $i^{th}$ observation and $y_i$ the response associated with it, then the <b>training data </b> consists of \n",
+    "\n",
+    "$$\\big\\{(x_1,y_1),(x_2,y_2),\\dots,(x_n,y_n)\\big\\}.$$\n",
+    "\n",
+    "There is an ocean of linear and non-linear methods of estimating $f$. Overall, they can be split into two categories: <br><b> parametric</b> and <b> non-parametric</b> methods.\n",
+    "\n",
+    "</font>\n",
+    "<ul> \n",
+    "    \n",
+    "   <li><h3> Parametric Methods</h3></li>\n",
+    " <font size='3'><br>\n",
+    "   <b> Step 1:</b> Assume the form of $f$<br>\n",
+    "    \n",
+    "  For example, one of the simplest assumptions we can make is that $f$ is linear, that is:\n",
+    "  \n",
+    "  $$f(X)=\\beta_0+\\sum_{i=1}^n\\beta_iX_i$$\n",
+    "  \n",
+    "  <b> Step 2:</b> Estimate the coefficients $\\{\\beta_i\\}_{i=0}^n$\n",
+    "  \n",
+    "  Next, you need to use the training data and select a procedure to estimate the coefficients $\\beta_0,\\beta_1,\\dots, \\beta_n$; that is find $\\widehat \\beta_0,\\dots,\\widehat \\beta_n$ such that $$\\widehat Y=\\widehat \\beta_0+\\sum_{i=1}^n\\widehat \\beta_i X_i$$\n",
+    "   \n",
+    "One of the main advantages of parametric methods is that the problem is transformed from estimating an arbitrary and unknown $f$ to estimating a set of parameters, which in general is much easier to do!\n",
+    "   \n",
+    "</font>\n",
+    "</ul>\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
