--- a/MA477 - Theory and Applications of Data Science/Lessons/Lesson 1 - General Overview/Lesson 1 -- General Overview.ipynb
+++ b/MA477 - Theory and Applications of Data Science/Lessons/Lesson 1 - General Overview/Lesson 1 -- General Overview.ipynb
@@ -451,7 +451,21 @@
     "  Next, you need to use the training data and select a procedure to estimate the coefficients $\\beta_0,\\beta_1,\\dots, \\beta_n$; that is find $\\widehat \\beta_0,\\dots,\\widehat \\beta_n$ such that $$\\widehat Y=\\widehat \\beta_0+\\sum_{i=1}^n\\widehat \\beta_i X_i$$\n",
     "   \n",
     "One of the main advantages of parametric methods is that the problem is transformed from estimating an arbitrary and unknown $f$ to estimating a set of parameters, which in general is much easier to do!\n",
-    "   \n",
+    "\n",
+    "One of the main disadvantages of parametic methods is that the assumption that you make about the form of $f$ often may not closely match the true form of $f$, which will unavoidably lead in poor estimates.\n",
+    "</font>\n",
+    "\n",
+    "<li><h3> Non-Parametric Methods</h3></li>\n",
+    "<br>\n",
+    "<font size='3'>\n",
+    "\n",
+    "Non-parametric methods do not make any assumptions on the form of $f$, but rather try to estimate it by trying to approximate as closely and as smoothly as possible the training data.\n",
+    "\n",
+    "One of the main advantages of non-parametric approaches is that because they do not make any assumptions on the form of $f$ they can accomodate a wide range of possibilities, and as such stand a better chance of approaching the true form of $f$.\n",
+    "\n",
+    "One of the main disadvantages is that they typically require far more training data than parametric methods to successfully and correctly estimate $f$.\n",
+    "    \n",
+    "    \n",
     "</font>\n",
     "</ul>\n",
     "\n"
