--- a/MA477 - Theory and Applications of Data Science/Lessons/Lesson 1 - General Overview/Lesson 1 -- General Overview.ipynb
+++ b/MA477 - Theory and Applications of Data Science/Lessons/Lesson 1 - General Overview/Lesson 1 -- General Overview.ipynb
@@ -374,9 +374,9 @@
     "  Typically there are two main reasons why it is of interest to estimate $f$: <b> prediction</b> and <b>inference</b>.\n",
     "  \n",
     "  <ol style='list-style-type:square;'>\n",
-    "    \n",
-    "   <li><b><font size='4'>Prediction</font></b></li>\n",
-    "    \n",
+    "<font size='4'>\n",
+    "   <li><b>Prediction</b></li>\n",
+    "</font>    \n",
     "  In many situations we can get a hold of the features for a particular target, but obtaining the value of the target variable is difficult and often impossible.\n",
     "  \n",
     "  For example, imagine you want to know whether a patient will have a severe adverse reaction to a particular drug. One, albeit very undesirable, way to figure that out is by administering the drug and observing the effect. However, if the patient has an adverse reaction which may cause damges, the hospital is liable for a lawsuit etc. So, you want to figure out a way to determine if the patient will have an adverse reaction to the drug based say on some blood characteristics, $X_1,\\dots, X_p$. These blook markers may be readily obtained in the lab!\n",
@@ -399,9 +399,10 @@
     "  \n",
     "Typically, when one is exclusively interested in prediction, then the specific form of $f$ is of little to no importance, and it is taken as a <b>black box</b>.\n",
     "   \n",
-    "   \n",
-    "<br><li><b> <font size='4'>Inference</font></b></li>\n",
-    " \n",
+    "<font size='4'>   \n",
+    "<br><li><b> Inference</b></li>\n",
+    "</font>\n",
+    "\n",
     " In practice we are often not so much interested in building the best prediction model, but rather in understanding specifically how $Y$ is affected as the features $X_1,\\dots, X_p$ change. \n",
     " \n",
     " In inference problems, the estimated $\\widehat f$ may no longer taken as a black box, but rather needs to be understood well.\n",
