Last Updated on 1/16/2020 @ 12:40PM

--- a/MA477 - Theory and Applications of Data Science/Lessons/Lesson 3 - Pandas/Lesson 3 - Pandas.ipynb
+++ b/MA477 - Theory and Applications of Data Science/Lessons/Lesson 3 - Pandas/Lesson 3 - Pandas.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -479,52 +479,52 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a</th>\n",
-       "      <td>-1.070892</td>\n",
-       "      <td>0.482472</td>\n",
-       "      <td>-0.223463</td>\n",
-       "      <td>0.714000</td>\n",
+       "      <td>-1.044150</td>\n",
+       "      <td>-0.889607</td>\n",
+       "      <td>0.363960</td>\n",
+       "      <td>-0.275587</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>b</th>\n",
-       "      <td>0.473238</td>\n",
-       "      <td>-0.072829</td>\n",
-       "      <td>-0.846794</td>\n",
-       "      <td>-1.514847</td>\n",
+       "      <td>-0.358961</td>\n",
+       "      <td>-0.713398</td>\n",
+       "      <td>0.613072</td>\n",
+       "      <td>0.782329</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>c</th>\n",
-       "      <td>-0.446515</td>\n",
-       "      <td>0.856399</td>\n",
-       "      <td>0.214094</td>\n",
-       "      <td>-1.245739</td>\n",
+       "      <td>-0.777980</td>\n",
+       "      <td>-1.277393</td>\n",
+       "      <td>-0.908490</td>\n",
+       "      <td>0.943944</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>d</th>\n",
-       "      <td>0.173181</td>\n",
-       "      <td>0.385317</td>\n",
-       "      <td>-0.883857</td>\n",
-       "      <td>0.153725</td>\n",
+       "      <td>2.207005</td>\n",
+       "      <td>-0.050901</td>\n",
+       "      <td>-0.228822</td>\n",
+       "      <td>-0.338943</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>e</th>\n",
-       "      <td>0.058209</td>\n",
-       "      <td>-1.142970</td>\n",
-       "      <td>0.357787</td>\n",
-       "      <td>0.560785</td>\n",
+       "      <td>-1.187508</td>\n",
+       "      <td>-3.762726</td>\n",
+       "      <td>0.134390</td>\n",
+       "      <td>-0.422286</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f</th>\n",
-       "      <td>1.083051</td>\n",
-       "      <td>1.053802</td>\n",
-       "      <td>-1.377669</td>\n",
-       "      <td>-0.937825</td>\n",
+       "      <td>-0.721983</td>\n",
+       "      <td>1.901407</td>\n",
+       "      <td>1.187396</td>\n",
+       "      <td>-0.093440</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>g</th>\n",
-       "      <td>0.515035</td>\n",
-       "      <td>0.513786</td>\n",
-       "      <td>0.515048</td>\n",
-       "      <td>3.852731</td>\n",
+       "      <td>0.163542</td>\n",
+       "      <td>0.241777</td>\n",
+       "      <td>-1.875747</td>\n",
+       "      <td>0.482121</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -532,16 +532,16 @@
       ],
       "text/plain": [
        "          A         B         C         D\n",
-       "a -1.070892  0.482472 -0.223463  0.714000\n",
-       "b  0.473238 -0.072829 -0.846794 -1.514847\n",
-       "c -0.446515  0.856399  0.214094 -1.245739\n",
-       "d  0.173181  0.385317 -0.883857  0.153725\n",
-       "e  0.058209 -1.142970  0.357787  0.560785\n",
-       "f  1.083051  1.053802 -1.377669 -0.937825\n",
-       "g  0.515035  0.513786  0.515048  3.852731"
+       "a -1.044150 -0.889607  0.363960 -0.275587\n",
+       "b -0.358961 -0.713398  0.613072  0.782329\n",
+       "c -0.777980 -1.277393 -0.908490  0.943944\n",
+       "d  2.207005 -0.050901 -0.228822 -0.338943\n",
+       "e -1.187508 -3.762726  0.134390 -0.422286\n",
+       "f -0.721983  1.901407  1.187396 -0.093440\n",
+       "g  0.163542  0.241777 -1.875747  0.482121"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3797,7 +3797,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another important conditional selection is if the values fall within a set of values. For example, if we want to select only the portion of the data whose values of a certain column fall in a given set of values, we can use the `.isin(values)` method."
+    "Another important and very useful conditional selection is if the values fall within a set of values. For example, if we want to select only the portion of the data whose values of a certain column fall in a given set of values, we can use the `.isin(values)` method. \n",
+    "\n",
+    "Consider the following dataframe:"
    ]
   },
   {
@@ -3999,25 +4001,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([24, 30, 23,  8, 21, 26, 28, 33, 12, 33,  8, 26, 11, 15,  3, 18, 19,\n",
-       "        2, 33, 29,  9,  7,  8, 20, 24, 16, 20, 11, 20, 28, 19,  1, 19,  9,\n",
-       "       30,  5,  6, 17, 29,  8, 16, 30, 30,  2, 23, 10, 28,  8,  3, 28])"
-      ]
-     },
-     "execution_count": 256,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.random.randint(1,34,50)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
