--- a/MA477 - Theory and Applications of Data Science/Lessons/Lesson 17 - Decision Trees & Random Forests/Lesson 17 - Decision Trees and Random Forests.ipynb
+++ b/MA477 - Theory and Applications of Data Science/Lessons/Lesson 17 - Decision Trees & Random Forests/Lesson 17 - Decision Trees and Random Forests.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<h2> ======================================================</h2>\n",
     " <h1>MA477 - Theory and Applications of Data Science</h1> \n",
-    "  <h1>Lesson 17: Decision Trees and Random Forests </h1> \n",
+    "  <h1>Lesson 17: Decision Trees </h1> \n",
     " \n",
     " <h4>Dr. Valmir Bucaj</h4>\n",
     " United States Military Academy, West Point \n",
@@ -21,6 +21,8 @@
     "    <li> Making Predictions</li>\n",
     "    <li> Decision Bounaries</li>\n",
     "    <li> Growing Trees</li>\n",
+    "    <li> Making Predictions</li>\n",
+    "    <li>Model Variabilty</li>\n",
     "    \n",
     " </ul>"
    ]
@@ -333,16 +335,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.tree import plot_tree"
+    "from sklearn.tree import plot_tree\n",
+    "import sklearn"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -369,9 +372,9 @@
    "source": [
     "<h3>Making Predictions</h3>\n",
     "\n",
-    "Let's discuss how the decision tree above decides on the type of plant based on the four measurements. One starts at the root node, or node #0. On the first node we are asked if the <b> petal lenght</b> is smaller or equal to 2.45cm. In case the petal length is smaller than 2.45 cm, then we have to move one step down to the left node (node #1). In this case since this node is a <i> leaf node</i> (that is, it is the end of the path) the decision tree will ask no more questions, but will simply look at the predicted class for that node (say by majority). In this case, it will automatically classifies that plant as <b> setosa</b>. In this (somewhat rare case) all the plants (out of these 150 training data) that have a petal length <=2.45 cm are setosa.\n",
+    "Let's discuss how the decision tree above decides on the type of plant based on the four measurements. One starts at the root node, or node #0. On the first node we are asked if the <b> petal width</b> is smaller or equal to 0.8cm. In case the petal width is smaller than 0.8 cm, then we have to move one step down to the left node (node #1). In this case since this node is a <i> leaf node</i> (that is, it is the end of the path) the decision tree will ask no more questions, but will simply look at the predicted class for that node (say by majority). In this case, it will automatically classifies that plant as <b> setosa</b>. In this (somewhat rare case) all the plants (out of these 150 training data) that have a petal width <=0.8 cm are setosa.\n",
     "\n",
-    "On the other hand, if you have another flower with a petal length of greater than 2.45 cm, then you have to go to the child node on the right (node #3). At this node, the decision tree asks you if the plant has a petal width less than 1.75 cm or not. Depending on the answer, you either move downwards to the root child on the left or on the right. You continue this way until you reach a leaf node (nodes #4, 5, 7 or 8). Suppose you end up on node #5. Then the decision tree will check the predicted class for node #7 and since there are 0 setosa, 2 veriscolor, and 4 virginica, by majority voting it will classify the plant as belonging to the virginica class. \n",
+    "On the other hand, if you have another flower with a petal width of greater than 0.8 cm, then you have to go to the child node on the right (node #3). At this node, the decision tree asks you if the plant has a petal width less than 1.75 cm or not. Depending on the answer, you either move downwards to the root child on the left or on the right. You continue this way until you reach a leaf node (nodes #4, 5, 7 or 8). Suppose you end up on node #5. Then the decision tree will check the predicted class for node #7 and since there are 0 setosa, 2 veriscolor, and 4 virginica, by majority voting it will classify the plant as belonging to the virginica class. \n",
     "\n",
     "\n",
     "As we can see, Decision Trees are great for interpretability purposes, which is one of their major advantages along with the fact that we can easily visualize them as well. \n",
@@ -396,9 +399,9 @@
     "\n",
     "<h4> Returning Probabilities</h4>\n",
     "\n",
-    "Instead of returning the predicted class, as we have previously seen with other models, decision trees can also return the probability that a particular plant (in this case) belongs to a certain class. Taking the two examples above. In the case of a plant with petal length <=2.45 cm, the decision tree would return a probability vector [1,0,0] since if we look at that particular class we have 50 plants from setosa and 0 from the other categories. So, the ratio is 50/(50+0+0)=1, and similarly for the other two classes.\n",
+    "Instead of returning the predicted class, as we have previously seen with other models, decision trees can also return the probability that a particular plant (in this case) belongs to a certain class. Taking the two examples above. In the case of a plant with petal width <=0.8 cm, the decision tree would return a probability vector [1,0,0] since if we look at that particular class we have 50 plants from setosa and 0 from the other categories. So, the ratio is 50/(50+0+0)=1, and similarly for the other two classes.\n",
     "\n",
-    "Suppose we end up on the leaf node #5. Then the decision tree will return the probability vector [0,1/3,2/3]. That is, a plant with petal width<=1.75 cm and 2.45cm<=petal length<4.95cm has a probability of 0 of belonging to the setosa class, a probability of 0.33 of belonging to the veriscolor class, and a probability of .67 of belonging to the virginica class.\n",
+    "Suppose we end up on the leaf node #5. Then the decision tree will return the probability vector [0,1/3,2/3]. That is, a plant with petal width<=1.75 cm and 0.8cm<=petal length>4.95cm has a probability of 0 of belonging to the setosa class, a probability of 0.33 of belonging to the veriscolor class, and a probability of .67 of belonging to the virginica class.\n",
     "\n",
     "<h3>Visualizing Decision Boundaries</h3>\n",
     "\n",
