--- a/MA477 - Theory and Applications of Data Science/Lessons/Lesson 20 - Boosting Models (AdaBoost)/Lesson 20 - Boosting Models (AdaBoost).ipynb
+++ b/MA477 - Theory and Applications of Data Science/Lessons/Lesson 20 - Boosting Models (AdaBoost)/Lesson 20 - Boosting Models (AdaBoost).ipynb
@@ -55,6 +55,7 @@
     "\n",
     "<h2>The AdaBoost Algorithm</h2>\n",
     "\n",
+    "<font size=3>\n",
     "Let $\\{x_i,y_i\\}_{i=1}^n$ be our training data where $x_i\\in\\mathbb{R}^N$ and $y_i\\in\\{1,-1\\}$. Let $\\{f_m(x)\\}_{m=1}^M$ be a set of week classifiers, where $f_m(x)\\in\\{1,-1\\}$. Let $$L_{0-1}(f_m(x_i),y_i)=\\begin{cases}0 &\\text{ if } f_m(x_i)=y_i\\\\\n",
     "1 & \\text{ if } f_m(x_i)\\neq y_i\n",
     "\\end{cases}\n",
@@ -86,7 +87,9 @@
     "\n",
     "<b>Step 2''.</b>\n",
     "\n",
-    "Update weights. For $i=1,2,\\dots,n$ $$w_i^{(m+1)}=w_i^{(m)}e^{\\alpha_m\\mathcal{I}_{(f_m(x_i)\\neq y_i)}(x_i)}$$\n",
+    "Update weights. For $i=1,2,\\dots,n$ $$w_i^{(m+1)}=w_i^{(m)}e^{-\\alpha_my_if_m(x_i)\\mathcal{I}_{(f_m(x_i)\\neq y_i)}(x_i)}$$\n",
+    "\n",
+    "If the model $f_m$ performs worse than $50\\%$, we flip the sign first.\n",
     "\n",
     "<h3>Making Predictions</h3>\n",
     "\n",
@@ -125,25 +128,27 @@
     "\n",
     "$$E=\\sum_ie^{-y_i\\sum_{j=1}^m\\alpha_jf_j(x_i)}e^{-y_i\\alpha_{m+1}f_{m+1}({x_i})}$$\n",
     "\n",
-    "Observe, that at this state we are holding the first $m$ terms constant, so we can rewrite them as $$w_i^{(m+1)}=e^{-y_i\\sum_{j=1}^m\\alpha_jf_j(x_i)}.$$\n",
+    "Observe, that at this state we are holding the first $m$ terms constant, so we can rewrite them as $$w_i^{(m+1)}=e^{-y_i\\sum_{j=1}^m\\alpha_jf_j(x_i)}\\propto w_i^{(m)}e^{-y_i\\alpha_mf_m(x_i)}.$$\n",
     "\n",
     "Then, \n",
     "\n",
     "\\begin{align*}\n",
     "E&=\\sum_{i=1}^n w_i^{(m+1)}e^{-y_i\\alpha_{m+1}f_{m+1}(x_i)}\\\\\n",
-    "&=\\sum_{i:f_m(x_i)=y_i}w_i^{(m+1)}e^{-\\alpha_{m+1}}+\\sum_{i:f_m(x_i)\\neq y_i}w_i^{(m+1)}e^{\\alpha_{m+1}}\\\\\n",
-    "&=e^{-\\alpha_{m+1}}\\sum_{i=1}^nw_i^{(m+1)}+\\left(e^{\\alpha_{m+1}}-e^{-\\alpha_{m+1}}\\right)\\sum_{i=1}^mw_i^{(m+1)}\\mathcal{I}_{(f_m(x_i)\\neq y_i)}(x_i)\n",
+    "&=\\sum_{i:f_{m+1}(x_i)=y_i}w_i^{(m+1)}e^{-\\alpha_{m+1}}+\\sum_{i:f_{m+1}(x_i)\\neq y_i}w_i^{(m+1)}e^{\\alpha_{m+1}}\\\\\n",
+    "&=e^{-\\alpha_{m+1}}\\sum_{i=1}^nw_i^{(m+1)}+\\left(e^{\\alpha_{m+1}}-e^{-\\alpha_{m+1}}\\right)\\sum_{i=1}^mw_i^{(m+1)}\\mathcal{I}_{(f_{m+1}(x_i)\\neq y_i)}(x_i)\n",
     "\\end{align*}\n",
     "\n",
     "This is the spot where it is abundandy clear why and how exactly the AdaBoost algorithm at each consecutive step pays more and more attention to the misclassified training instances. \n",
     "\n",
-    "Specifically, optimizing the objective function above with respect to $f_m$ is equivalent to optimizing \n",
+    "Specifically, optimizing the objective function above with respect to $f_{m+1}$ is equivalent to optimizing \n",
     "\n",
-    "$$\\sum_{i=1}^mw_i^{(m+1)}\\mathcal{I}_{(f_m(x_i)\\neq y_i)}(x_i)$$\n",
+    "$$\\sum_{i=1}^mw_i^{(m+1)}\\mathcal{I}_{(f_{m+1}(x_i)\\neq y_i)}(x_i)$$\n",
     "\n",
     "which is precisely what AdaBoost does. The value $\\alpha_m$ that minimizes $E$ is a solution of $\\frac{dE}{d\\alpha_m}=0$ and it can be shown to be precisely \n",
     "\n",
-    "$$\\alpha_m=\\log\\left(\\frac{1-E_m}{E_m}\\right)$$ which is essentially what AdaBoost does (aside frome the added learning parmeter)."
+    "$$\\alpha_m=\\log\\left(\\frac{1-E_m}{E_m}\\right)$$ which is essentially what AdaBoost does (aside frome the added learning parmeter).\n",
+    "\n",
+    "</font>"
    ]
   },
   {
