--- a/MA477 - Theory and Applications of Data Science/Lessons/Lesson 20 - Boosting Models (AdaBoost)/Lesson 20 - Boosting Models (AdaBoost).ipynb
+++ b/MA477 - Theory and Applications of Data Science/Lessons/Lesson 20 - Boosting Models (AdaBoost)/Lesson 20 - Boosting Models (AdaBoost).ipynb
@@ -87,9 +87,11 @@
     "\n",
     "<b>Step 2''.</b>\n",
     "\n",
-    "Update weights. For $i=1,2,\\dots,n$ $$w_i^{(m+1)}=w_i^{(m)}e^{-\\alpha_my_if_m(x_i)\\mathcal{I}_{(f_m(x_i)\\neq y_i)}(x_i)}$$\n",
+    "Update weights. For $i=1,2,\\dots,n$ $$w_i^{(m+1)}=w_i^{(m)}e^{-\\alpha_my_if_m(x_i)}$$\n",
     "\n",
     "If the model $f_m$ performs worse than $50\\%$, we flip the sign first.\n",
+    "\n",
+    "Take aways: For training samples $x_i$ that are missclassified we get $y_if_m(x_i)=-1$ and thus the corresponding weights are increased on the next step (remember $\\alpha_m>0$). On the other hand, for the samples $x_i$ that are correctly classified we get $y_if_m(x_i)=1$ and thus, because $\\alpha_m>0$, the weights on the next stage are decreased. \n",
     "\n",
     "<h3>Making Predictions</h3>\n",
     "\n",
@@ -126,7 +128,7 @@
     "\n",
     "So, let $f_{m+1}$ be the classifier we need to add at step $m+1$. Then, the objective function that needs to be optimized is:\n",
     "\n",
-    "$$E=\\sum_ie^{-y_i\\sum_{j=1}^m\\alpha_jf_j(x_i)}e^{-y_i\\alpha_{m+1}f_{m+1}({x_i})}$$\n",
+    "$$E=\\sum_ie^{-y_i\\sum_{j=1}^{m+1}\\alpha_jf_j(x_i)}=\\sum_ie^{-y_i\\sum_{j=1}^m\\alpha_jf_j(x_i)}e^{-y_i\\alpha_{m+1}f_{m+1}({x_i})}$$\n",
     "\n",
     "Observe, that at this state we are holding the first $m$ terms constant, so we can rewrite them as $$w_i^{(m+1)}=e^{-y_i\\sum_{j=1}^m\\alpha_jf_j(x_i)}\\propto w_i^{(m)}e^{-y_i\\alpha_mf_m(x_i)}.$$\n",
     "\n",
@@ -144,7 +146,11 @@
     "\n",
     "$$\\sum_{i=1}^mw_i^{(m+1)}\\mathcal{I}_{(f_{m+1}(x_i)\\neq y_i)}(x_i)$$\n",
     "\n",
-    "which is precisely what AdaBoost does. The value $\\alpha_m$ that minimizes $E$ is a solution of $\\frac{dE}{d\\alpha_m}=0$ and it can be shown to be precisely \n",
+    "which is precisely what AdaBoost does. In other words, if $x_i$ is misclassified at step $m$, then $y_if_m(x_i)=-1$ so $e^{-y_i\\alpha_mf_m(x_i)}>1$ and since $w_i^{(m+1)}=w_i^{(m)}e^{-y_i\\alpha_mf_m(x_i)}$, we see that $w_i^{(m+1)}$ will be large, so it is in the $f_{m+1}$ classifier's best interest to work much harder in correctly classifying $x_i$ at step $m+1$ so that we get $\\mathcal{I}_{(f_{m+1}(x_i)\\neq y_i)}(x_i)=0$ and thus in turn we manage to reach the minimum of the loss function $E$. Because, if $x_i$ gets misclassified again at step $m+1$ then the chances of converging to the minimum of the loss function $E$ are lower.\n",
+    "\n",
+    "On the other hand, if $x_i$ was correctly classified at step $m$, then $y_if_m(x_i)=1$ so $e^{-y_i\\alpha_mf_m(x_i)}<1$ and thus $w_i^{(m+1)}$ will be much smaller than the weight associated with the misclassified training samples, hence $f_{m+1}$ doesn't have to work as hard to correctly classify those training samples as in the case where they were missclassified, because in this case the cost would be much lower.\n",
+    "\n",
+    "The value $\\alpha_m$ that minimizes $E$ is a solution of $\\frac{dE}{d\\alpha_m}=0$ and it can be shown to be precisely \n",
     "\n",
     "$$\\alpha_m=\\log\\left(\\frac{1-E_m}{E_m}\\right)$$ which is essentially what AdaBoost does (aside frome the added learning parmeter).\n",
     "\n",
