--- a/MA477 - Theory and Applications of Data Science/Lessons/Lesson 26 - Shallow Neural Networks/Lesson 26 - Shallow Neural Networks.ipynb
+++ b/MA477 - Theory and Applications of Data Science/Lessons/Lesson 26 - Shallow Neural Networks/Lesson 26 - Shallow Neural Networks.ipynb
@@ -200,7 +200,7 @@
     "A^{[1]}&=&\\begin{bmatrix}a^{[1](1)} &a^{[1](2)} &\\dots & a^{[1](m)}\\end{bmatrix}_{2\\times m}\\\\\n",
     "& &\\\\\n",
     "Z^{[2]}&=&\\begin{bmatrix}z^{[2](1)}& z^{[2](2)} &\\dots &z^{[2](m)}\\end{bmatrix}_{1\\times m}\\\\\n",
-    "A^{[2]}&=&\\begin{bmatrix}a^{[2](1)} &a^{[2](2)} &\\dots & a^{[2](m)}\\end{bmatrix}_{1\\times m}\\\\\n",
+    "A^{[2]}&=&\\begin{bmatrix}a^{[2](1)} &a^{[2](2)} &\\dots & a^{[2](m)}\\end{bmatrix}_{1\\times m}\n",
     "\\end{eqnarray*}\n",
     "\n",
     "One way to make this notation more tangible is to think of it as follows: horizontally they iterate through different training examples wheras vertically they run through different nodes on each layer.\n",
